k8s/verification/restate-hello.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: restate-hello
  labels:
    # Allow the Restate cluster "restate-dev" to call services in this namespace
    # Ref: https://github.com/restatedev/restate-operator#restatecluster
    allow.restate.dev/restate-dev: "true"
